--- a/browser/index.html
+++ b/browser/index.html
@@ -25,23 +25,16 @@
 <main ng-controller="mainCtrl">
     {{matrices}}
     <section class='wrapper'>
-        <!-- <div id="noteController">
-            <form>
-                <br>
-                <input type="checkbox" id="lifeCheck" name="life" value="lifify"> Give Life </input>
-                <br>
-                <br>
-                <input type="checkbox" id="bpmIncrease" name="bpmIncrease" value="bpmIncrease"> Increase BPM </input>
-                <br>
-                <br>
-                <input type="checkbox" id="bassDrop" name="bassDrop" value="bassDrop"> Bass Drops </input>
-            </form>
-        </div> -->
         <div id="Content">
-            <div ng-repeat="part in parts">
+            <div ng-repeat="part in parts track by $index">
                 <sequencer part="part"></sequencer>
             </div>
-           <!--  <button type="button" class="btn btn-success" ng-click="createMatrix(-10,4)">Create Matrix</button> -->
+
+           <!--  
+           TODO: Add new parts
+            <button type="button" class="btn btn-success" ng-click="addPart('Drum')">Add Drum Kit</button>
+            <button type="button" class="btn btn-success" ng-click="addPart('Bass')">Add Bass</button>
+            <button type="button" class="btn btn-success" ng-click="addPart('Lead')">Add Lead</button> -->
             <!-- <div id="secondMatrix">
                 <canvas nx="matrix" id="drumMatrix">
                 </canvas>
